# axum_static

./: Cargo.toml  README.md
axum-static/: Cargo.toml
axum-static/src/: improvements.md  lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
