[package]
  name = "axum_static"
  version = "1.8.6"
  edition = "2024"
  description = "static file serving router for axum server"
  documentation = "https://docs.rs/axum_static"
  readme = "./../README.md"
  repository = "https://github.com/azzybana/axum_static"
  license = "MIT"
  keywords = ["axum", "file", "serve", "static"]
  include = ["Cargo.toml", "docs", "src/lib.rs"]

[package.metadata]
  authors = [
    "myyrakle <sssang97@naver.com>",
    "Azzybana Raccoon <121582001+Azzybana@users.noreply.github.com>"
  ]

[dependencies]
  axum = { workspace = true }
  tower-http = { workspace = true, features = ["fs"] }
