[package]
    name = "example-basic"
    version = "0.1.0"
    edition = "2024"

[dependencies]
    axum = { workspace = true }
    axum_static = { workspace = true }
    tokio = { version = "1", features = ["full"] }
    tracing = "0.1"
    tracing-subscriber = { version = "0.3", features = [
        "env-filter"
    ] }
